<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.HomeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/figma_link_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/figma_link_label"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/figma_link_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/ic_edittext_bg"
        android:hint="@string/figma_link_hint"
        android:paddingStart="@dimen/_5sdp"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/figma_token_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/figma_token_label"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/figma_token_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/ic_edittext_bg"
        android:hint="@string/figma_token_hint"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_5sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:background="@drawable/ic_button_bg"
        android:text="@string/submit_button_text"
        android:textAllCaps="false"
        android:textColor="@color/only_white"
        android:textSize="@dimen/_16ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/identify_json_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:background="@drawable/ic_button_bg"
        android:text="@string/identify_button_text"
        android:textAllCaps="false"
        android:textColor="@color/only_white"
        android:textSize="@dimen/_16ssp"
        android:visibility="gone" />

</LinearLayout>